--- a/Front End/style.css
+++ b/Front End/style.css
@@ -1,79 +1,55 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 body {
-    background-color: white;
-    color: black;
+    height: 100vh;
+}
+
+.screen {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 
-.container {
-    margin-top: 6%;
+/* Cabeçalho */
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 8%;
 }
 
-.conteudo-login {
-    width: 80%;
+.img-logo1 {
+    width: 55px;
+    height: 55px;
 }
 
-#navbar-id {
-    background-color: rgb(77, 0, 77);
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-#input_search::placeholder {
-    color: black;
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
 }
+
 
 .conteudo {
     display: flex;
     flex-direction: column;
-}
-
-.imagens {
-    width: 100px;
-    height: 60vh;
-}
-
-.teste {
-    display: flex;
-    height: 60vh;
-    flex-direction: column;
-}
-
-.teste nav {
-    position: fixed;
-}
-
-.cards {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 25px;
-}
-
-.image-logo {
-    width: 40px;
-    height: 40px;
-}
-
-.link-title {
-    display: flex;
-    align-items: center;
-}
-
-.link-title img {
-    display: flex;
-    align-items: center;
-    margin-right: 5%;
-}
-
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
+    width: 100%;
+    height: 92%;
 }
