--- a/Front End/style.css
+++ b/Front End/style.css
@@ -25,6 +25,8 @@ body {
     justify-content: space-evenly;
     width: 100%;
     height: 8%;
+    box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
+    position: fixed;
 }
 
 .img-logo1 {
@@ -43,7 +45,12 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 20%;
+    width: 25%;
+}
+
+.links a {
+    text-decoration: none;
+    color: black;
 }
 
 
