--- a/Front End/Screens/Dashboard/Codes/style.css
+++ b/Front End/Screens/Dashboard/Codes/style.css
@@ -5,6 +5,12 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+button, a {
+    cursor: pointer;
+    text-decoration: none;
+    color: black
+}
+
 body {
     height: 100vh;
 }
@@ -16,7 +22,7 @@ body {
 }
 
 
-/* Cabeçalho */
+/* Header */
 
 .header {
     display: flex;
@@ -46,7 +52,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 25%;
+    width: 32%;
 }
 
 .links a {
@@ -101,10 +107,18 @@ body {
     padding: 10%;
 }
 
-.texto-post button {
+.texto-post a {
+    text-decoration: none;
+    width: 30%;
+    height: 8%;
+}
+
+.texto-post a button {
     padding: 3% 10%;
     border-radius: 30px;
     background-color: rgb(67, 0, 190);
     border: 3px solid black;
     color: white;
+    width: 100%;
+    height: 100%;
 }
