--- a/Front End/Screens/Cadastro/cadastroStyle.css
+++ b/Front End/Screens/Cadastro/cadastroStyle.css
@@ -23,7 +23,7 @@
     margin-top: 36px;
 }
 
-.email {
+.inputs {
     font-family: "Open Sans", sans-serif;
     margin-top: 5px;
     color: #929292;
@@ -155,3 +155,4 @@
     font-family: "Open Sans";
     font-weight: bold;
 }
+
