--- a/Front End/Screens/Cadastro/cadastroStyle.css
+++ b/Front End/Screens/Cadastro/cadastroStyle.css
@@ -55,7 +55,7 @@
 #continuar {
     width: 485px;
     height: 48px;
-    background-color: #bebebe;
+    background-color: #cccccc;
     color: #191919;
     border-radius: 8px;
     margin-top: 32px;
