--- a/Front End/Screens/Dashboard/Codes/style.css
+++ b/Front End/Screens/Dashboard/Codes/style.css
@@ -5,20 +5,10 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-button, a {
-    cursor: pointer;
-    text-decoration: none;
-    color: black
-}
-
 body {
-    height: 100vh;
-}
-
-.screen {
     display: flex;
     flex-direction: column;
-    height: 300vh;
+    height: 320vh;
 }
 
 
@@ -26,14 +16,13 @@ body {
 
 .header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 8%;
+    height: 5%;
     background-color: white;
     box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
-    position: fixed;
 }
 
 .img-logo1 {
@@ -52,7 +41,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 32%;
+    width: 50%;
 }
 
 .links a {
@@ -69,56 +58,34 @@ body {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 100%;
-    padding-top: 4%;
+    height: 95%;
 }
 
-.evento1, .evento2, .evento3, .evento4 {
+.evento {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
-    height: 22%;
+    width: 800px;
+    height: 400px;
     background-color: rgb(255, 255, 255);
 }
 
-.evento1 div, .evento2 div, .evento3 div, .evento4 div {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-    justify-content: center;
-}
-
-.evento1 div img, .evento2 div img, .evento3 div img, .evento4 div img {
-    width: 90%;
+.image-post, .image-post img{
+    width: 400px;
+    height: 400px;
+    border-radius: 25px;
 }
 
 .texto-post {
-    justify-content: space-evenly !important;
-}
-
-.texto-post h1 {
-    font-size: 36pt;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 400px;
+    height: 400px;
+    text-align: justify;
 }
 
 .texto-post h3 {
-    padding: 10%;
-}
-
-.texto-post a {
-    text-decoration: none;
-    width: 30%;
-    height: 8%;
-}
-
-.texto-post a button {
-    padding: 3% 10%;
-    border-radius: 30px;
-    background-color: rgb(67, 0, 190);
-    border: 3px solid black;
-    color: white;
-    width: 100%;
-    height: 100%;
+    width: 350px;
 }
