--- a/Front End/Screens/Dashboard/Codes/style.css
+++ b/Front End/Screens/Dashboard/Codes/style.css
@@ -8,7 +8,7 @@
 body {
     display: flex;
     flex-direction: column;
-    height: 320vh;
+    height: 350vh;
 }
 
 
@@ -20,7 +20,6 @@ body {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 5%;
     background-color: white;
     box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
 }
@@ -39,9 +38,11 @@ body {
 .links {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 50%;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .links a {
@@ -88,4 +89,49 @@ body {
 
 .texto-post h3 {
     width: 350px;
+}
+
+.texto-post button {
+    padding: 10px 30px;
+    border: 2px solid black;
+    border-radius: 50px;
+    background-color: #6F03D7;
+    color: white;
+}
+
+
+/* Responsividade */
+
+@media screen and (max-width:720px) {
+    body {
+        height: 350vh;
+    }
+    
+    .header a {
+        font-size: 8px;
+    }
+
+    .evento {
+        width: 250px;
+        height: 500px;
+        flex-direction: column;
+    }
+
+    .texto-post h3 {
+        display: none;
+    }
+
+    .evento div, .evento img {
+        width: 250px;
+        height: 250px;
+        text-align: center;
+    }
+
+    .texto-post {
+        order: 1;
+    }
+
+    .image-post {
+        order: 0;
+    }
 }
