--- a/Front End/Screens/Informações do evento/Codes/infostyle.css
+++ b/Front End/Screens/Informações do evento/Codes/infostyle.css
@@ -17,14 +17,12 @@ button, a {
 
 .header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 8%;
     background-color: white;
     box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
-    position: fixed;
 }
 
 .img-logo1 {
@@ -41,9 +39,11 @@ button, a {
 .links {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 32%;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .links a {
@@ -204,3 +204,9 @@ a#success:not(:hover){
     background-color: #343436;
 }
 
+
+@media screen and (max-width: 720px) {
+    .header a {
+        font-size: 8px;
+    }
+}
