--- a/Front End/Screens/Angenda mês/Codes/calendariostyle.css
+++ b/Front End/Screens/Angenda mês/Codes/calendariostyle.css
@@ -1,9 +1,53 @@
+/* Header */
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
+}
+
+.img-logo1 {
+    width: 55px;
+    height: 55px;
+}
+
+.logo a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: black;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+#dias tr td {
+    cursor: pointer;
+}
+
 body {
-    height: 100vh;
+    height: 150vh;
     border: 0;
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .botao {
@@ -47,7 +91,6 @@ body {
 }
 
 #meses td {
-    
     color: purple;
     font-weight: bold;
 }
