--- a/Front End/Screens/Perfil/Codes/perfilStyle.css
+++ b/Front End/Screens/Perfil/Codes/perfilStyle.css
@@ -16,16 +16,16 @@
     width: 100%;
 }
 
+/* Header */
+
 .header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 8%;
     background-color: white;
     box-shadow: 0 0 5px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.15);
-    position: fixed;
 }
 
 .img-logo1 {
@@ -33,23 +33,27 @@
     height: 55px;
 }
 
-.logo {
+.logo a {
     display: flex;
     flex-direction: row;
     align-items: center;
+    color: black;
 }
 
 .links {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 32%;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
-.links a {
+a {
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
 
 .conteudo {
