--- a/Screens/Perfil/Codes/perfilStyle.css
+++ b/Screens/Perfil/Codes/perfilStyle.css
@@ -1,19 +1,12 @@
-*{
+* {
     margin: 0;
-    border: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-decoration: none;
-    color: black;
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+body {
     height: 100vh;
-    width: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Header */
@@ -56,31 +49,33 @@ a {
     cursor: pointer;
 }
 
+/* Conteúdo */
+
 .conteudo {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 350px;
-    height: 50%;
-}
-
-.perfil {
-    display: flex;
-    width: 500px;
-    height: 300px;
     flex-direction: row;
-    background-color: purple;
-    border-radius: 30px;
 }
 
-#perfil_p1 {
-    width: 30%;
-    height: 100%;
-    background-color: purple;
+.conteudo div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
 }
 
-#perfil_p2 {
-    width: 70%;
-    height: 100%;
-    background-color: rgb(228, 228, 228);
+.imagem {
+    width: 400px;
+    border-radius: 100%;
+    margin: 50px;
+}
+
+@media screen and (max-width:720px) {
+    .header a {
+        font-size: 8px;
+    }
+
+    .conteudo {
+        flex-direction: column;
+        width: 100%;
+    }
 }
